[tool.poetry]
name = "pdf-keywords"
version = "0.1.0"
description = ""
authors = ["nikolasschriefer <info@nikolasschriefer.de>"]

[tool.poetry.dependencies]
python = "^3.9"
pdftotext = "^2.2.1"
streamlit = "^1.0.0"
watchdog = "^2.1.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
